@@ -570,7 +570,7 @@ enum
 #define KEY_WINCH -2
 
 /* Some extra bits for the undo function. */
-#define UNdel_backspace		(1<<1)
+#define SKIP_FINAL_BACKSPACE	(1<<1)
 #define UNcut_marked_forward	(1<<2)
 #define UNcut_cutline		(1<<3)
 #endif /* !NANO_TINY */
